adjust bkgd-color/gradient for pager buttons on IE. fixes #53

--- a/docs/assets/css/google-bootstrap.css
+++ b/docs/assets/css/google-bootstrap.css
@@ -2259,12 +2259,9 @@ select:focus:required:invalid:focus {
   -moz-border-radius: 0 2px 2px 0;
   border-radius: 0 2px 2px 0;
 }
-.pager a {
+.pager li > a {
   padding: 4px 12px;
   border: 1px solid #dcdcdc;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
   background-color: #f3f3f3;
   background-image: -moz-linear-gradient(top, #f5f5f5, #f1f1f1);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f1f1f1));
@@ -2273,6 +2270,8 @@ select:focus:required:invalid:focus {
   background-image: linear-gradient(to bottom, #f5f5f5, #f1f1f1);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff1f1f1', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #f5f5f5;
   color: #333;
   text-shadow: 0 1px 0 #fff;
   text-decoration: none;
@@ -2282,7 +2281,7 @@ select:focus:required:invalid:focus {
   outline: none;
   overflow: visible;
 }
-.pager a:hover {
+.pager li > a:hover {
   border-color: #c6c6c6;
   background-color: #f5f5f5;
   background-image: -moz-linear-gradient(top, #f8f8f8, #f1f1f1);
@@ -2292,11 +2291,13 @@ select:focus:required:invalid:focus {
   background-image: linear-gradient(to bottom, #f8f8f8, #f1f1f1);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff8f8f8', endColorstr='#fff1f1f1', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #f1f1f1;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
-.pager a:active {
+.pager li > a:active {
   background-color: #f4f4f4;
   background-image: -moz-linear-gradient(top, #f6f6f6, #f1f1f1);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f6f6f6), to(#f1f1f1));
@@ -2305,6 +2306,8 @@ select:focus:required:invalid:focus {
   background-image: linear-gradient(to bottom, #f6f6f6, #f1f1f1);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff6f6f6', endColorstr='#fff1f1f1', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #f1f1f1;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -2313,7 +2316,6 @@ select:focus:required:invalid:focus {
 .pager .disabled a:hover {
   color: #b3b3b3;
   border-color: #d9d9d9;
-  background-color: #f3f3f3;
   background-image: -moz-linear-gradient(top, #f5f5f5, #f1f1f1);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f1f1f1));
   background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
@@ -2321,6 +2323,8 @@ select:focus:required:invalid:focus {
   background-image: linear-gradient(to bottom, #f5f5f5, #f1f1f1);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff1f1f1', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #f3f3f3;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
